--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   backend:
     build:
-      context: ./backend
-      dockerfile: Dockerfile
+      context: backend
+      dockerfile: backend/Dockerfile
     ports:
       - "5010:8080"
       - "5011:8081"
@@ -19,8 +19,8 @@ services:
 
   frontend:
     build:
-      context: ./frontend
-      dockerfile: Dockerfile
+      context: frontend
+      dockerfile: frontend/Dockerfile
     ports:
       - "5012:80"
     depends_on:
